<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    cardview:cardCornerRadius="@dimen/cornerradius_cardview"
    android:layout_marginBottom="@dimen/activity_vertical_margin">

    <!-- FrameLayout pone los elementos encima de otros
    ordenandolos sobre la esquina superior izquierda-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/pictureCard"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_cardview"
            android:background="@drawable/perro2"
            android:scaleType="centerCrop"
            android:transitionName="@string/transitionName_Pictura"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/cardview_shadow_start_color"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/usernameCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize_username_cardview" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/firstword_card"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstword_textsize_card"/>

                <TextView
                    android:id="@+id/timeCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/timeCard"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstword_textsize_card"
                    android:layout_marginLeft="@dimen/timecard_marginleft_card"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/like_margintop_card">

                <CheckBox
                    android:id="@+id/likeCheckCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"/>

                <TextView
                    android:id="@+id/likeNumberCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/likeNumberCard"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/firstword_textsize_card"
                    android:layout_marginLeft="@dimen/timecard_marginleft_card"/>


            </LinearLayout>


        </LinearLayout>


    </FrameLayout>


</android.support.v7.widget.CardView>
