<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.siva.platzigram.loginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.6">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:src="@drawable/logotipo_buap"/>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/padding_horizontal_login">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/matricula"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/string_matricula" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/EditTextWhite">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/string_contrasena"
                        android:inputType="textPassword"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/boton_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/boton_login"
                    android:theme="@style/RaisedButtonDark"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/noAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/noAccount"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/textSize_noAccount"/>

                    <TextView
                        android:id="@+id/crearCuenta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/crearCuenta"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"
                        android:textSize="@dimen/textSize_noAccount"
                        android:layout_toRightOf="@id/noAccount"/>

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
